# custom_operator

./: CMakeLists.txt  create_model.py  create_taxinet_system_network.py  custom_dynamics_library.cc  custom_dynamics_library.h  custom_model.onnx  run_model.py  run_system_network.py
models/: full_mlp_supervised.pth
